<resources>
    <string name="app_name">HeRV</string>
    <string name="title_devices">BLE Device Scan</string>

    <string name="text_monitorswitch">Heart Monitor</string>
    <string name="text_monitoroff">Off</string>
    <string name="text_monitornobluetooth">Not available</string>
    <string name="text_monitorconnecting">Connecting...</string>
    <string name="text_activitystart">Start activity</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="posture_lie">Lie down</string>
    <string name="posture_sit">Sit</string>
    <string name="posture_stand">Stand</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="unknown_device">Unknown device</string>


    <string name="notification_running">Heart rate monitor running</string>
    <string name="notification_disconnected">Heart rate sensor disconnected. Trying to reconnect.</string>
    <string name="notification_connecting">Heart rate sensor found - monitor connecting</string>

    <string name="no_device_paired">no device paired</string>
    <string name="pair_device">Pair device</string>

    <string name="session">Daily Activity</string>
    <string name="start_session">Start a new session</string>
    <string name="session_started">Activity started</string>
    <string name="session_stopped">Start new activity</string>
    <string name="training">Training session</string>

    <string name="paired_device">paired</string>
    <string name="save_session_started">started</string>
    <string name="save_activity">activity</string>
    <string name="save_posture">posture</string>

    <string name="signout">Sign out</string>
    <string name="no_user"></string>


    <string name="act_baseline">train-baseline</string>
    <string name="act_focus">train-focus</string>
    <string name="act_breathe">train-breathe</string>

    <!-- TEXTS USED TO GUIDE USER IN TRAINING SESSION -->

    <string name="training_stage">train-stage</string>

    <string name="tr_description"> Start training session </string>
    <string name="tr_description_1"> When you are ready to start your training sessions, press play </string>
    <string name="tr_description_3">  You will be presented with alternating sessions of focus and breathing</string>

    <string name="tr_baseline"> Baseline </string>
    <string name="tr_baseline_1"> First, your baseline will be measured </string>
    <string name="tr_baseline_3"> Try to stay reasonably quiet for one minute</string>
    <string name="tr_baseline_4"> Please, do not control your breathing or focus </string>

    <string name="tr_focus"> Focus task </string>
    <string name="tr_focus_pre_1"> Now, you will count backwards with fixed decrements to test and improve focus </string>
    <string name="tr_focus_pre_3"> Press play when you are ready and you will see the starting number and decrement </string>
    <string name="tr_focus_1"> Count backwards starting from </string>
    <string name="tr_focus_3"> with decrements of </string>

    <string name="tr_breathe"> Breathing task </string>
    <string name="tr_breathe_1"> Now, try to focus only on your respiration </string>
    <string name="tr_breathe_2"> Inhale and exhale at regular intervals </string>
    <string name="tr_breathe_3"> You can use the countdown below to inhale and exhale in 5s intervals </string>
    <string name="tr_breathe_4"> When you are ready, press start </string>

</resources>
