<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="herv.app.activities.RecordSessionFragment">


    <TextView
            android:id="@+id/tv_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_session"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    />

    <Button
            android:id="@+id/bt_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_session" />

    <Button
            android:id="@+id/bt_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toRightOf="@+id/bt_daily"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_session"
    />



</android.support.constraint.ConstraintLayout>
