<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="herv.app.activities.HeartbeatFragment">

    <Button
        android:id="@+id/bt_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/pair_device"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ToggleButton
        android:id="@+id/tg_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:fontFamily="monospace"
        android:text="Heart Monitor"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintRight_toRightOf="@+id/bt_pair"
        app:layout_constraintTop_toBottomOf="@+id/bt_pair"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/tv_paired_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_device_paired"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintLeft_toRightOf="@+id/bt_pair"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_pair"
        />

    <TextView
        android:id="@+id/tv_heartrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_monitoroff"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintLeft_toRightOf="@+id/tg_heart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tg_heart"
        app:layout_constraintHorizontal_bias="0.47" />

</android.support.constraint.ConstraintLayout>
