<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="herv.app.activities.RecordSessionFragment">

    <TextView
        android:id="@+id/tv_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/session"
        android:textColor="@color/herv_light_red"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tg_heart" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ab_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startActivity"
        app:fabSize="mini"
        app:backgroundTint="@color/herv_primary_red"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@id/tv_session"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintTop_toTopOf="@id/tv_session"
        app:srcCompat="@android:drawable/ic_media_play" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ab_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stopActivity"
        app:backgroundTint="@color/herv_primary_red"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toRightOf="@id/tv_session"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_session"
        app:srcCompat="@android:drawable/ic_media_pause" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ab_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startActivity"
        app:backgroundTint="@color/herv_light_red"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toRightOf="@id/tv_session"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_session"
        app:srcCompat="@android:drawable/ic_delete" />

    <RadioGroup
        android:id="@+id/rg_posture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ab_start"
        android:layout_marginTop="32dp">

        <RadioButton
            android:id="@+id/rb_liedown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/posture_lie" />

        <RadioButton
            android:id="@+id/rb_sit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/posture_sit" />

        <RadioButton
            android:id="@+id/rb_stand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/posture_stand" />

    </RadioGroup>

    <Spinner
        android:id="@+id/sp_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_posture"
        android:layout_marginTop="32dp"/>

</android.support.constraint.ConstraintLayout>
