<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.lifegrep.heart.activities.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <Switch
        android:id="@+id/sw_heart"
        android:layout_width="227dp"
        android:layout_height="66dp"
        android:onClick="toggleHeartMonitor"
        android:text="@string/text_monitorswitch"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_heartbeat"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="73dp"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_heartbeat"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginLeft="3dp"
        android:text="@string/text_monitoroff"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintLeft_toLeftOf="@+id/sw_heart"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="211dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activitystart"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="startActivity"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        app:layout_constraintRight_toRightOf="@+id/et_userID"
        android:layout_marginTop="129dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UserID"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="73dp"
        android:layout_marginTop="59dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_userID"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        android:layout_marginEnd="84dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>

